--- a/portfolio.html
+++ b/portfolio.html
@@ -37,11 +37,11 @@
             <div style="text-align: center;">
                    <h1>What people are saying...</h1>
             </div>
-            <div class="row" style="padding:5%;margin-left: 150px;" >
-            <div class="carousel slide" id="slide">
+            <div class="row" style="padding:5%;margin-left: 100px;" >
+            <!-- <div class="carousel slide" id="slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row">
+                        <div class="row"> -->
                             <div class="col-md-4">
                                 <div class="card" id="crd">
                                     <img class="card-img-top rounded-circle" src="images/hum.jpg" style="width:100px;margin-left:120px;" alt="Card image cap">
